# cobase

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
icons/: icon.icns
scripts/: build.js  dev.js  generate_icon.py
src/backend/: Cargo.toml  applyPatch.js  binary-check.js  main.js  parseApplyPatch.js  preload.js  prompts.js  tauri.conf.json  watcher.js
src/backend/capabilities/: default.json
src/backend/plugins/fs/: index.js
src/backend/plugins/git/: index.js
src/backend/plugins/patch/: applyPatch.js  index.js  parseApplyPatch.js
src/backend/plugins/search/: index.js
src/backend/plugins/terminal/: index.js
src/backend/src/: lib.rs  main.rs  patch.rs  prompts.rs
src/frontend/: App.tsx  api.ts  clipboard.ts  global.d.ts  index.css  main.tsx  selectors.ts  store.ts  tauri-shim.d.ts
src/frontend/components/: Directory.tsx  ExportBar.tsx  FileItem.tsx  Grid.tsx  Header.tsx  Notify.tsx  PatchModal.tsx  Sidebar.tsx  ThemeToggle.tsx  TreeRow.tsx
src/frontend/hooks/: useNotify.tsx  useResizable.ts
src/frontend/plugins/editor/: fileIcons.tsx  index.tsx  store.ts
src/frontend/plugins/explorer/: index.tsx  selectors.ts  store.ts
src/frontend/plugins/git/: index.tsx  store.ts
src/frontend/plugins/patches/: index.tsx
src/frontend/plugins/search/: index.tsx  store.ts
src/frontend/plugins/settings/: index.tsx
src/frontend/plugins/terminal/: index.tsx
src/frontend/services/: tree.ts
src/frontend/shell/: CommandPalette.tsx  LeftRail.tsx  ShellApp.tsx  TopBar.tsx  registry.tsx  store.ts  types.ts
(+20 files in other folders)
