[package]
name = "cobase"
version = "0.1.0"
edition = "2021"

[lib]
name = "cobase_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
ignore = "0.4.23"
notify = "8.2.0"
portable-pty = "0.8"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-dialog = "2.2.0"
